# mlsys-challenge-2026

./: .gitignore  18  AUDIT_REPORT.md  Cargo.toml  DESIGN.md  README.md  USAGE.md  install.sh
benchmarks/: mlsys-2026-1.json
src/: README.md  bitset_liveness.rs  cost.rs  cost_model.rs  graph_rewrite.rs  hw_profile.rs  layout.rs  lib.rs  liveness.rs  main.rs  memory.rs  models.rs  optimizer.rs  parallel.rs  partition.rs  pipeline.rs  scheduler.rs  telemetry.rs  triage.rs  weight_stationary.rs
