[package]
name = "mlsys"
version = "0.1.0"
edition = "2021"
authors = ["MLSys Competitor"]
description = "Graph Scheduler for Google MLSys Challenge 2026"

[[bin]]
name = "mlsys"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
thiserror = "1.0"
anyhow = "1.0"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

