[package]
name = "mlsys"
version = "0.1.0"
edition = "2021"
authors = ["MLSys Competitor"]
description = "Graph Scheduler for Google MLSys Challenge 2026"

[[bin]]
name = "mlsys"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
thiserror = "1.0"
anyhow = "1.0"
rayon = "1.10"
log = "0.4"
env_logger = "0.11"
bumpalo = "3.16"  # Bump allocator for O(1) allocation
nix = { version = "0.29", features = ["process", "signal", "mman"] }  # fork/waitpid/signals
shared_memory = "0.12"  # Cross-process shared memory segments
bit-set = "0.8"  # Efficient bitset for liveness analysis
bit-vec = "0.8"  # Backing storage for bit-set

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

